--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "mtgsdk": "^0.3.0"
+    "mtgsdk": "^0.3.0",
+    "path": "^0.12.7"
   }
 }
