--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mtgsdk": "^0.3.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
+    "url-search-params": "^0.10.0",
     "vision": "^4.1.1"
   }
 }
