Add mongojs ORM, install MongoDB locally. add login and routes.

--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "description": "Magic The Gathering Prototype",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ash",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.0",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.15.5",
+    "express-validator": "^4.1.1",
     "hapi": "^16.6.0",
     "lodash.filter": "^4.6.0",
     "lodash.take": "^4.1.1",
+    "mongodb": "^2.2.31",
+    "mongojs": "^2.4.1",
     "mtgsdk": "^0.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
     "url-search-params": "^0.10.0",
